# DeliveryDetect

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: check.yml
deliverydetect/bot/: bot.py  keyboards.py  middlewares.py  states.py
deliverydetect/bot/handlers/: __init__.py  courier.py
deliverydetect/core/: database.py  enums.py  logs.py  settings.py
deliverydetect/models/: callback.py  database.py
migrations/: env.py
migrations/versions/: 7731860a945e_.py  838cad68caba_.py  cd50577da80b_.py
tests/: conftest.py  test_database.py
